add valtio; add undo

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     },
     "dependencies": {
         "react": "^19.2.0",
-        "react-dom": "^19.2.0"
+        "react-dom": "^19.2.0",
+        "valtio": "^2.3.0",
+        "valtio-history": "^1.0.1"
     },
     "devDependencies": {
         "@biomejs/biome": "2.3.14",
